Update logic
